--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,14 +7,15 @@ html {
 
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 
-h1 {
-    font-family: "Old Standard TT";
-}
-
-h1, p {
+h1, h2, p {
     margin: 0;
+}
+
+.hidden {
+    display: none;
 }
 
 button {
@@ -37,6 +38,7 @@ button {
 }
 
 .section-title {
+    font-family: "Old Standard TT";
     font-size: 56px;
     line-height: 60px;
     letter-spacing: -1.2000000476837158px;
@@ -59,4 +61,4 @@ button {
     border: unset;
 }
 
-@import 'index', 'swiper', 'base', 'header', 'availability', 'about', 'brand-features', 'rooms', 'icon-bar'
+@import 'index', 'swiper', 'base', 'header', 'availability', 'about', 'brand-features', 'rooms', 'icon-bar', 'room-description-card'
